[project]
name = "currenttime-mcp"
version = "1.0.1"
description = "MCP server for accurate current time with IP-based timezone detection"
readme = "README.md"
license = "MIT"
authors = [
    { name = "CurrentTime MCP", email = "currenttime-mcp@example.com" }
]
keywords = ["mcp", "time", "timezone", "model-context-protocol", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp>=1.0.0",
    "requests>=2.31.0",
    "pytz>=2024.1"
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/xavierchoi/currenttime-mcp"
Repository = "https://github.com/xavierchoi/currenttime-mcp.git"
Issues = "https://github.com/xavierchoi/currenttime-mcp/issues"

[project.scripts]
currenttime-mcp = "currenttime_mcp.server:main"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
